Rework on dialog utils API